welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: value =< is not a member of Int
  return (Math.abs(n-100) =< 10 || Math.abs(n-200) =< 10)
                          ^nearHundred:2: error: value =< is not a member of Int
  return (Math.abs(n-100) =< 10 || Math.abs(n-200) =< 10)
                                                   ^